--- a/views/page.twig
+++ b/views/page.twig
@@ -1,4 +1,4 @@
-{# Page - Home, Agence, Notre différence #}
+{# Page standard #}
 
 {% extends "layouts/base.twig" %}
 
@@ -6,15 +6,8 @@
 
 	{# {% include "partials/banner-page.twig" with { 'fields': fn('get_fields') } %} #}
 
-	<div class="l-container">
-		<h1>Lorem ipsum dolor sit amet.</h1>
-		<h2>Lorem ipsum dolor sit.</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit repellat nobis, aperiam maxime error ea eius, modi sequi vitae tempore temporibus iste placeat, exercitationem amet deleniti esse voluptas! Fugit perspiciatis voluptates porro vel unde repellendus ex sint voluptate eaque odio, quisquam facere saepe facilis illo doloremque atque quidem cum veniam.</p>
-
-		<a href="#" class="btn">En savoir plus</a>
-	</div>
-
-
+		
 	{{ post.content }}
+
 	
 {% endblock %}
