--- a/src/scss/components/base/_footer-newsletter.scss
+++ b/src/scss/components/base/_footer-newsletter.scss
@@ -34,7 +34,7 @@
   input {
     padding: 0.55em 0.65em;
     width: 100%;
-    border: 1px solid $color-grey-medium;
+    border: 1px solid $color-grey-dark;
     border-radius: $border-radius-small;
     color: $color-navy;
     transition: color $trans-color, background-color $trans-color, border-color $trans-color;
